// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Image debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Coffee Mug"
    className="productImg undefined"
    src="./cofee-mug.png"
  />
</div>
`;

exports[`Product Image debe de mostrar el componente correctamente con la imagen personalizada 1`] = `
<img
  alt="Coffee Mug"
  className="productImg undefined"
  src="./cofee-mug.png"
/>
`;
